--- a/pom.xml
+++ b/pom.xml
@@ -2,14 +2,14 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>academy.kata</groupId>
-  <artifactId>0</artifactId>
+  <groupId>VitaliiKondrashov</groupId>
+  <artifactId>Crud_2.0</artifactId>
   <version>1.0-SNAPSHOT</version>
 
   <packaging>war</packaging>
 
   <properties>
-    <spring.version>5.3.14</spring.version>
+    <spring.version>5.3.13</spring.version>
     <thymeleaf.version>3.0.14.RELEASE</thymeleaf.version>
   </properties>
 
@@ -18,7 +18,7 @@
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-orm</artifactId>
-      <version>5.3.14</version>
+      <version>${spring.version}</version>
     </dependency>
 
     <dependency>
@@ -43,7 +43,7 @@
     <dependency>
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
-      <version>8.0.25</version>
+      <version>8.0.33</version>
     </dependency>
 
     <dependency>
@@ -61,31 +61,34 @@
   </dependencies>
 
   <build>
-    <finalName>Spring_MVC</finalName>
-
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <configuration>
-          <source>17</source>
-          <target>17</target>
-        </configuration>
-      </plugin>
-    </plugins>
+    <finalName>Crud_2.0</finalName>
 
     <pluginManagement>
       <plugins>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-war-plugin</artifactId>
-          <version>2.4</version>
+          <version>3.1.0</version>
+          <executions>
+            <execution>
+              <id>default-war</id>
+              <phase>prepare-package</phase>
+              <configuration>
+                <warSourceDirectory>src/webapp</warSourceDirectory>
+                <warName>spring_mvc_hibernate</warName>
+                <failOnMissingWebXml>false</failOnMissingWebXml>
+              </configuration>
+            </execution>
+          </executions>
+        </plugin>
+
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.8.1</version>
           <configuration>
-            <!-- Должен ссылаться на папку, содержащую WEB-INF/-->
-            <warSourceDirectory>src/webapp</warSourceDirectory>
-            <warName>spring_mvc</warName>
-            <!-- Позволит нам запускать проект с помощью маппинга контроллерами, без использования конфигурации в web.xml. -->
-            <failOnMissingWebXml>false</failOnMissingWebXml>
+            <source>17</source>
+            <target>17</target>
           </configuration>
         </plugin>
       </plugins>
