--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
     <dependency>
       <groupId>org.thymeleaf</groupId>
       <artifactId>thymeleaf-spring5</artifactId>
-      <version>${thymeleaf.version}</version>
+      <version>3.0.14.RELEASE</version>
     </dependency>
 
     <dependency>
@@ -75,7 +75,7 @@
               <phase>prepare-package</phase>
               <configuration>
                 <warSourceDirectory>src/webapp</warSourceDirectory>
-                <warName>spring_mvc_hibernate</warName>
+                <warName>Скгв_2.0</warName>
                 <failOnMissingWebXml>false</failOnMissingWebXml>
               </configuration>
             </execution>
